--- a/products/indusvale2.html
+++ b/products/indusvale2.html
@@ -10,12 +10,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
     <link rel="stylesheet" href="../navbar.css" />
-    <link rel="stylesheet" href="../footer.css" />
     <style>
       @font-face {
         font-family: Anton;
@@ -65,7 +60,6 @@
         bottom: -50%;
         top: -50%;
         transform: translateY(-50%);
-        z-index: -10;
       }
       .right-overlay {
         position: absolute;
@@ -73,7 +67,6 @@
         bottom: -50%;
         top: -50%;
         transform: translateY(-23%);
-        z-index: -10;
       }
       .product-title {
         padding-top: 15vh;
@@ -172,21 +165,21 @@
         <div class="container">
           <div class="row m-0 justify-content-center align-items-center">
             <div class="col-3">
-              <img class="w-100" src="../images/indusvale-img1.png" alt="" />
+              <img class="w-100" src="../images2/image 7.png" alt="" />
             </div>
             <div class="col-5">
-              <img class="w-100" src="../images/indusvale-img2.png" alt="" />
+              <img class="w-100" src="../images2/image 7.png" alt="" />
             </div>
             <div class="col-3">
-              <img class="w-100" src="../images/indusvale-img3.png" alt="" />
+              <img class="w-100" src="../images2/image 7.png" alt="" />
             </div>
           </div>
           <div
             class="row m-0 product-title justify-content-center align-items-center flex-column"
           >
             <h1 class="text-center">
-              <img src="../images/left-overlay.png" class="left-overlay" />
-              <img src="../images/right-overlay.png" class="right-overlay" />
+              <img src="../images2/left-overlay.png" class="left-overlay" />
+              <img src="../images2/right-overlay.png" class="right-overlay" />
               Indusvale
             </h1>
             <p class="product-desc text-center mt-5">
@@ -205,7 +198,7 @@
               </p>
             </div>
             <div class="col-5">
-              <img class="w-100" src="../images/image 8.png" alt="" />
+              <img class="w-100" src="../images2/image 8.png" alt="" />
             </div>
           </div>
           <div
@@ -218,7 +211,7 @@
               </p>
             </div>
             <div class="col-6">
-              <img class="w-100" src="../images/indusvale.png" alt="" />
+              <img class="w-100" src="../images2/indusvale.png" alt="" />
             </div>
           </div>
           <div class="row mt-5 justify-content-center">
@@ -243,7 +236,7 @@
               </p>
             </div>
             <div class="col-5">
-              <img class="w-100" src="../images/image 9.png" alt="" />
+              <img class="w-100" src="../images2/image 9.png" alt="" />
             </div>
           </div>
           <div class="row m-0 mt-5 justify-content-center align-items-center">
@@ -258,59 +251,11 @@
               <button>Explore</button>
             </div>
             <div class="col-5">
-              <img class="w-100" src="../images/image 8.png" alt="" />
+              <img class="w-100" src="../images2/image 8.png" alt="" />
             </div>
           </div>
         </div>
       </div>
     </main>
-    <footer class="footer mt-5">
-      <div class="container">
-        <div class="footer-heading row py-5">
-          <a
-            href="/"
-            class="d-flex justify-content-start align-items-center gap-2"
-            ><img class="logo-img" src="../images/logo.png" />
-            <h1 class="m-0">Blitzfa</h1>
-          </a>
-        </div>
-        <div class="row">
-          <div class="col-5">
-            <ul>
-              <li class="my-3">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <p class="m-0">Mumbai, Maharashtra</p>
-              </li>
-              <li>
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <p class="m-0">ecommerce@blitzfa.org</p>
-              </li>
-            </ul>
-          </div>
-          <div class="col-4">
-            <h3>Our Information</h3>
-            <div class="border1"></div>
-            <!--for the underline -->
-            <ul>
-              <a href="/" class="my-3 d-block"><li>Home</li></a>
-              <a href="#about" class="my-3 d-block"><li>About Us</li></a>
-              <a href="#products" class="my-3 d-block"><li>Products</li></a>
-              <a href="#contact" class="my-3 d-block"><li>Contact Us</li></a>
-            </ul>
-          </div>
-          <div class="col-3">
-            <h3>Our Products</h3>
-            <div class="border1"></div>
-            <!--for the underline -->
-            <ul>
-              <a href="./products/indusvale.html" class="my-3 d-block"
-                ><li>Indusvale</li></a
-              >
-            </ul>
-          </div>
-        </div>
-        <div class="footer-bottom">All rights reservered @ 2023</div>
-      </div>
-    </footer>
   </body>
 </html>
