--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
       .product-heading {
         color: #630338;
       }
-      .indusvale-img,
+      #products a,
       .product-btn,
-      .indusvale-mobile-app-img,
       .indusvale-logo {
         width: unset !important;
       }
@@ -210,11 +209,42 @@
       /* Responsive */
       @media screen and (max-width: 992px) {
         #hero {
-          padding: 20vh;
+          padding-top: 20vh;
         }
-        #about .about-card img {
-          width: auto;
+        .indusvale-mobile-app-img {
+          transform: rotateZ(0deg);
         }
+        #contact .contact-us-form {
+          width: 90%;
+        }
+      }
+
+      @media screen and (max-width: 516px) {
+        .left-overlay {
+          display: none;
+        }
+      }
+
+      .content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        bottom: -100%;
+        transition: all 0.5s ease-in-out;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem;
+        font-family: Poppins;
+      }
+      .about-card {
+        position: relative;
+        overflow: hidden;
+      }
+      .about-card:hover .content {
+        bottom: 0;
       }
     </style>
   </head>
@@ -293,7 +323,9 @@
               never before, innovating like never before, exploring like never
               before.
             </p>
-            <button class="hero-btn">Explore Products</button>
+            <a href="#products"
+              ><button class="hero-btn">Explore Products</button></a
+            >
           </div>
           <div class="col-7 d-none d-lg-block">
             <img src="./images/hero2.png" class="w-100 my-5" />
@@ -322,21 +354,45 @@
         <div class="row justify-content-center mt-5">
           <div class="col-lg-4 col-12">
             <div class="about-card gap-5">
-              <img src="./images/mission.png" alt="mission" />
-              <h2 class="mt-3">Our Mission</h2>
+              <div class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                magni vel excepturi velit, molestias quasi rem libero
+                repudiandae, neque corporis provident dolorum illum fuga sunt
+                non ullam ducimus! Repellat, assumenda?
+              </div>
+              <div class="media-img">
+                <img src="./images/mission.png" alt="mission" />
+              </div>
             </div>
+            <h2 class="mt-3 text-center">Our Mission</h2>
           </div>
           <div class="col-lg-4 col-12">
-            <div class="about-card">
-              <img src="./images/vision.png" alt="vision" />
-              <h2 class="mt-3">Our Vision</h2>
+            <div class="about-card gap-5">
+              <div class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                magni vel excepturi velit, molestias quasi rem libero
+                repudiandae, neque corporis provident dolorum illum fuga sunt
+                non ullam ducimus! Repellat, assumenda?
+              </div>
+              <div class="media-img">
+                <img src="./images/vision.png" alt="vision" />
+              </div>
             </div>
+            <h2 class="mt-3 text-center">Our Vision</h2>
           </div>
           <div class="col-lg-4 col-12">
-            <div class="about-card">
-              <img src="./images/values.png" alt="values" />
-              <h2 class="mt-3">Our Values</h2>
+            <div class="about-card gap-5">
+              <div class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                magni vel excepturi velit, molestias quasi rem libero
+                repudiandae, neque corporis provident dolorum illum fuga sunt
+                non ullam ducimus! Repellat, assumenda?
+              </div>
+              <div class="media-img">
+                <img src="./images/values.png" alt="values" />
+              </div>
             </div>
+            <h2 class="mt-3 text-center">Our Values</h2>
           </div>
         </div>
       </div>
@@ -375,12 +431,14 @@
             their clothing, in their lifestyle, how they connect, how they do
             business, and everything under the sun.
           </p>
-          <button class="product-btn mt-3">Know more</button>
+          <a href="./products/indusvale.html">
+            <button class="product-btn mt-3">Know more</button>
+          </a>
         </div>
         <div class="row justify-content-center align-items-center">
-          <div class="col-12 col-lg-4 text-center">
+          <div class="col-12 col-lg-6 text-center">
             <img
-              class="indusvale-mobile-app-img"
+              class="indusvale-mobile-app-img w-100"
               src="./images/OnePlus 10T.png"
               alt="Indusvale Mobile App"
             />
@@ -446,8 +504,8 @@
             <h1 class="m-0">Blitzfa</h1>
           </a>
         </div>
-        <div class="row">
-          <div class="col-5">
+        <div class="row m-0 mb-5">
+          <div class="col-12 col-sm-5 mt-2">
             <ul>
               <li class="my-3">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -459,7 +517,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-4">
+          <div class="col-6 col-sm-4 mt-2">
             <h3>Our Information</h3>
             <div class="border1"></div>
             <!--for the underline -->
@@ -470,7 +528,7 @@
               <a href="#contact" class="my-3 d-block"><li>Contact Us</li></a>
             </ul>
           </div>
-          <div class="col-3">
+          <div class="col-6 col-sm-3 mt-2">
             <h3>Our Products</h3>
             <div class="border1"></div>
             <!--for the underline -->
@@ -484,5 +542,6 @@
         <div class="footer-bottom">All rights reservered @ 2023</div>
       </div>
     </footer>
+    <script src="./navbar.js"></script>
   </body>
 </html>
