Added data to Mission/Vision/Values

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
         text-align: center;
       }
       .about-card img {
-        width: 100%;
+        /* width: 100%; */
         height: 300px;
       }
+
       /* Products */
       .product-heading {
         color: #630338;
@@ -127,9 +128,13 @@
       .indusvale-logo {
         width: unset !important;
       }
+      .indusvale-img {
+        width: auto;
+      }
       .indusvale-mobile-app-img {
         transform: rotateZ(-15.53deg);
       }
+
       .mobile-app-desc h1 {
         font-family: Bungee;
         color: #630338;
@@ -218,6 +223,15 @@
           width: 90%;
         }
       }
+      @media screen and (max-width: 615px) {
+        .media-img {
+          width: 90% !important;
+        }
+        .about-card img {
+          width: 100%;
+          height: auto;
+        }
+      }
 
       @media screen and (max-width: 516px) {
         .left-overlay {
@@ -239,8 +253,14 @@
         padding: 2rem;
         font-family: Poppins;
       }
-      .about-card {
+      .media-img {
+        margin: auto;
+        width: max-content;
+        max-width: 100%;
         position: relative;
+        height: max-content;
+      }
+      .about-card {
         overflow: hidden;
       }
       .about-card:hover .content {
@@ -353,46 +373,42 @@
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-lg-4 col-12">
-            <div class="about-card gap-5">
-              <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                magni vel excepturi velit, molestias quasi rem libero
-                repudiandae, neque corporis provident dolorum illum fuga sunt
-                non ullam ducimus! Repellat, assumenda?
-              </div>
+            <div class="about-card">
               <div class="media-img">
+                <div class="content">
+                  We want to bring artificial intelligence as a friend and not a
+                  foe in your lifestyle, so that you can do what you do best,
+                  feel your best, and create your own path.
+                </div>
                 <img src="./images/mission.png" alt="mission" />
               </div>
             </div>
-            <h2 class="mt-3 text-center">Our Mission</h2>
+            <h2 class="mt-3 mb-5 text-center">Our Mission</h2>
           </div>
           <div class="col-lg-4 col-12">
-            <div class="about-card gap-5">
-              <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                magni vel excepturi velit, molestias quasi rem libero
-                repudiandae, neque corporis provident dolorum illum fuga sunt
-                non ullam ducimus! Repellat, assumenda?
-              </div>
+            <div class="about-card">
               <div class="media-img">
+                <div class="content">
+                  We strive to build technologies and products that let you
+                  connect with the real world, the world beyond screens, and in
+                  the outdoors. Digital technologies are for us are a way to
+                  help you experience the world.
+                </div>
                 <img src="./images/vision.png" alt="vision" />
               </div>
             </div>
-            <h2 class="mt-3 text-center">Our Vision</h2>
+            <h2 class="mt-3 mb-5 text-center">Our Vision</h2>
           </div>
           <div class="col-lg-4 col-12">
-            <div class="about-card gap-5">
-              <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
-                magni vel excepturi velit, molestias quasi rem libero
-                repudiandae, neque corporis provident dolorum illum fuga sunt
-                non ullam ducimus! Repellat, assumenda?
-              </div>
+            <div class="about-card">
               <div class="media-img">
+                <div class="content">
+                  Innovation, Integrity, Indian Roots, and Continuous Learning.
+                </div>
                 <img src="./images/values.png" alt="values" />
               </div>
             </div>
-            <h2 class="mt-3 text-center">Our Values</h2>
+            <h2 class="mt-3 mb-5 text-center">Our Values</h2>
           </div>
         </div>
       </div>
