--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -319,6 +319,6 @@
         <div class="footer-bottom">All rights reservered @ 2023</div>
       </div>
     </footer>
-    <script src="./navbar.js"></script>
+    <script src="../navbar.js"></script>
   </body>
 </html>
