Added redirects on Explore button of indusvale page

--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -58,7 +58,7 @@
         font-family: Poppins;
       }
       .indusvale {
-        padding-top: 20vh;
+        padding-top: 15vh;
       }
       .left-overlay {
         position: absolute;
@@ -85,6 +85,9 @@
         text-transform: uppercase;
         font-size: 3rem;
       }
+      .indusvale a {
+        width: 40%;
+      }
       .indusvale button {
         border-radius: 6px;
         padding: 0.5rem 1.5rem;
@@ -94,10 +97,9 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         font-weight: bold;
-        width: 40%;
       }
       .product-title button {
-        width: 20% !important;
+        width: 100% !important;
       }
       .product-desc {
         width: 65%;
@@ -200,7 +202,9 @@
               the standards not just for 'Make in India' but also for 'Innovate
               in India”
             </p>
-            <button>Explore</button>
+            <a href="https://indusvale.in/">
+              <button>Explore</button>
+            </a>
           </div>
           <div
             class="row m-0 mt-5 justify-content-center align-items-center flex-lg-row flex-column-reverse"
@@ -265,7 +269,9 @@
                 innovation and continuous focus on patent development for the
                 utility and materials of products themselves.
               </p>
-              <button>Explore</button>
+              <a href="https://indusvale.in/">
+                <button>Explore</button>
+              </a>
             </div>
             <div class="col-12 col-lg-5">
               <img class="w-100" src="../images/image 8.png" alt="" />
