Changes in the Modal

--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
 
     .info li {
       font-family: Poppins;
-      text-indent: -1.4rem;
+      list-style: none;
+      text-align: center;
+      margin-top: 1rem;
     }
   </style>
 </head>
@@ -629,15 +631,15 @@
           We are committed to research, to bring science into people’s lifestyle Our future depends
           exponentially on the knowledge, imagination, skills, teamwork,
           integrity and courage of our employees, we values these qualities most
-          highly.
+          highly
         </li>
         <li>
           We expect profits, but profits from work that instigates
-          societal transformations.
+          societal transformations
         </li>
       `,
-      "purpose": `<li>We are in business of improving people’s lives. All our actions must be measured by our success in achieving technological transformation for a connected world.</li>`,
-      "mission": `<li>To establish IndusVale as the preeminent lifestyle ecosystem worldwide in the next 10 years (2034).</li>`
+      "purpose": `<li>We are in business of improving people’s lives. All our actions must be measured by our success in achieving technological transformation for a connected world</li>`,
+      "mission": `<li>To establish IndusVale as the preeminent lifestyle ecosystem worldwide in the next 10 years (2034)</li>`
     }
 
     function togglepreview(content) {
