--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="navbar.css" />
   <link rel="stylesheet" href="footer.css" />
   <style>
@@ -42,6 +43,11 @@
       src: url(./fonts/Vollkorn/static/Vollkorn-Regular.ttf);
     }
 
+    @font-face {
+      font-family: FloodStd;
+      src: url(./fonts/FloodStd/floodstd.otf)
+    }
+
     * {
       font-family: Anton;
       margin: 0;
@@ -56,7 +62,8 @@
     }
 
     .header {
-      color: #3a98b9;
+      color: var(--primaryColor);
+      /* color: #3a98b9; */
       font-family: Bungee;
       font-size: 4rem;
       font-style: normal;
@@ -78,15 +85,15 @@
       font-weight: bold;
     }
 
-    p,
-    .product-heading {
+    p {
       font-family: "Poppins";
     }
 
     /* About  */
     .about-header {
       position: relative;
-      color: #3a98b9;
+      /* color: #3a98b9; */
+      color: var(--primaryColor);
     }
 
     .left-overlay {
@@ -127,6 +134,7 @@
     /* Products */
     .product-heading {
       color: #630338;
+      font-family: FloodStd;
     }
 
     #products a,
@@ -157,7 +165,8 @@
 
     /* Contact us */
     .contact-us-header {
-      background-color: #3a98b9;
+      /* background-color: #3a98b9; */
+      background-color: var(--primaryColor);
       color: white;
     }
 
@@ -378,7 +387,7 @@
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </button>
             <div class="dropdown-content">
-              <a href="/products/indusvale.html">Indusvale</a>
+              <a href="/products/indusvale.html">IndusVale</a>
             </div>
           </li>
 
@@ -598,7 +607,7 @@
           <!--for the underline -->
           <ul>
             <a href="./products/indusvale.html" class="my-3 d-block">
-              <li>Indusvale</li>
+              <li>IndusVale</li>
             </a>
           </ul>
         </div>
