--- a/careers/index.html
+++ b/careers/index.html
@@ -4,254 +4,215 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Openings</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <style>
+      @font-face {
+        font-family: Anton;
+        src: url(../fonts/Anton/Anton-Regular.ttf);
+      }
+
+      @font-face {
+        font-family: Poppins;
+        src: url(../fonts/Poppins/Poppins-Regular.ttf);
+      }
+
+      @font-face {
+        font-family: Bungee;
+        src: url(../fonts/Bungee/Bungee-Regular.ttf);
+      }
+
+      @font-face {
+        font-family: Vollkorn;
+        src: url(../fonts/Vollkorn/static/Vollkorn-Regular.ttf);
+      }
+
+      @font-face {
+        font-family: FloodStd;
+        src: url(../fonts/FloodStd/floodstd.otf);
+      }
+
+      .navbar{
+        top: 0;
+      }
+      @media screen and (max-width: 500px) {
+        .filter-section{
+          flex-direction: column;
+        }
+      }
+
+    </style>
     <link rel="stylesheet" href="./career.css" />
+    <link rel="stylesheet" href="../navbar.css" />
+    <link rel="stylesheet" href="../footer.css" />
   </head>
   <body>
-    <header>
-      <h1>Openings</h1>
-    </header>
-    <section class="filter-section">
-      <label for="category">Filter by:</label>
-      <select id="category">
-        <option>All categories</option>
-      </select>
-      <select id="location">
-        <option>All locations</option>
-      </select>
-      <!-- <button class="search-icon">
-        Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools
-        <svg
-          fill="#000000"
-          height="20px"
-          width="20px"
-          version="1.1"
-          id="Capa_1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 0 488.4 488.4"
-          xml:space="preserve"
-        >
-          <g>
-            <g>
+    <nav class="navbar">
+      <div class="container">
+        <div class="nav-items">
+          <div class="logo">
+            <a
+              href="/"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+              "
+              ><img class="logo-img" src="../images/logo.png" /> Blitzfa
+            </a>
+          </div>
+          <ul>
+            <li><a href="../#about">About Us</a></li>
+            <!-- <li><a href="#products">Products</a></li> -->
+
+            <li class="dropdown">
+              <button class="dropbtn">
+                Products
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="../products/indusvale.html">IndusVale</a>
+              </div>
+            </li>
+
+            <li><a href="../#contact">Contact Us</a></li>
+          </ul>
+          <button class="hamburger">
+            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+            <svg
+              width="30px"
+              height="30px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
-                d="M0,203.25c0,112.1,91.2,203.2,203.2,203.2c51.6,0,98.8-19.4,134.7-51.2l129.5,129.5c2.4,2.4,5.5,3.6,8.7,3.6
-			s6.3-1.2,8.7-3.6c4.8-4.8,4.8-12.5,0-17.3l-129.6-129.5c31.8-35.9,51.2-83,51.2-134.7c0-112.1-91.2-203.2-203.2-203.2
-			S0,91.15,0,203.25z M381.9,203.25c0,98.5-80.2,178.7-178.7,178.7s-178.7-80.2-178.7-178.7s80.2-178.7,178.7-178.7
-			S381.9,104.65,381.9,203.25z"
+                d="M4 18L20 18"
+                stroke="#ffffff"
+                stroke-width="2"
+                stroke-linecap="round"
               />
+              <path
+                d="M4 12L20 12"
+                stroke="#ffffff"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <path
+                d="M4 6L20 6"
+                stroke="#ffffff"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </nav>
+    <div class="container" style="min-height: 100vh; display: flex; flex-direction: column; margin-top: 4.5rem;">
+      <header>
+        <h1>Openings</h1>
+      </header>
+      <section class="filter-section">
+        <label for="category">Filter by:</label>
+        <select id="category">
+          <option>All categories</option>
+        </select>
+        <select id="location">
+          <option>All locations</option>
+        </select>
+        <!-- <button class="search-icon">
+          Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools
+          <svg
+            fill="#000000"
+            height="20px"
+            width="20px"
+            version="1.1"
+            id="Capa_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 488.4 488.4"
+            xml:space="preserve"
+          >
+            <g>
+              <g>
+                <path
+                  d="M0,203.25c0,112.1,91.2,203.2,203.2,203.2c51.6,0,98.8-19.4,134.7-51.2l129.5,129.5c2.4,2.4,5.5,3.6,8.7,3.6
+        s6.3-1.2,8.7-3.6c4.8-4.8,4.8-12.5,0-17.3l-129.6-129.5c31.8-35.9,51.2-83,51.2-134.7c0-112.1-91.2-203.2-203.2-203.2
+        S0,91.15,0,203.25z M381.9,203.25c0,98.5-80.2,178.7-178.7,178.7s-178.7-80.2-178.7-178.7s80.2-178.7,178.7-178.7
+        S381.9,104.65,381.9,203.25z"
+                />
+              </g>
             </g>
-          </g>
-        </svg>
-      </button> -->
-    </section>
-    <section class="accordion">
-      <!-- Dynamic content goes here -->
-    </section>
-    <!-- <script>
-      // Fetch and parse CSV file
-      async function loadCSV() {
-        const response = await fetch("./careers.csv"); // Replace with the actual path to your CSV file
-        const csvData = await response.text();
-
-        // Parse CSV into an array of objects
-        const rows = csvData.split("\n").slice(1); // Skip header row
-        console.log(rows);
-        const jobs = rows.map((row) => {
-          const [category, job] = row.split(",");
-          return { category: category.trim(), job: job.trim() };
-        });
-
-        // Group jobs by category
-        const groupedJobs = jobs.reduce((acc, { category, job }) => {
-          acc[category] = acc[category] || [];
-          acc[category].push(job);
-          return acc;
-        }, {});
-
-        populateAccordion(groupedJobs);
-      }
-
-      // Populate accordion dynamically
-      function populateAccordion(data) {
-        const accordionContainer = document.querySelector(".accordion");
-        accordionContainer.innerHTML = ""; // Clear existing content
-
-        Object.entries(data).forEach(([category, jobs]) => {
-          const item = document.createElement("div");
-          item.className = "accordion-item";
-
-          // Accordion header
-          const header = document.createElement("h2");
-          header.textContent = category;
-          header.addEventListener("click", () => {
-            const content = header.nextElementSibling;
-            const isOpen = content.classList.contains("open");
-
-            // Close all other items
-            document.querySelectorAll(".accordion-content").forEach((c) => {
-              c.classList.remove("open");
-              c.style.maxHeight = null;
-            });
-
-            // Open this one
-            if (!isOpen) {
-              content.classList.add("open");
-              content.style.maxHeight = content.scrollHeight + "px";
-            }
-          });
-
-          // Accordion content
-          const content = document.createElement("div");
-          content.className = "accordion-content";
-
-          // Populate jobs for the category
-          jobs.forEach((job) => {
-            const jobItem = document.createElement("p");
-            jobItem.textContent = job;
-            content.appendChild(jobItem);
-          });
-
-          item.appendChild(header);
-          item.appendChild(content);
-          accordionContainer.appendChild(item);
-        });
-      }
-
-      // Load the CSV and populate the accordion on page load
-      document.addEventListener("DOMContentLoaded", loadCSV);
-    </script> -->
-    <!-- <script>
-      // Fetch and parse CSV file
-      async function loadCSV() {
-        const response = await fetch("./careers.csv"); // Replace with the actual path to your CSV file
-        const csvData = await response.text();
-
-        // Parse CSV into an array of objects
-        const rows = csvData.split("\n").slice(1); // Skip header row
-        const jobs = rows.map((row) => {
-          const [category, job, location] = row.split(",");
-          return {
-            category: category.trim(),
-            job: job.trim(),
-            location: location.trim(),
-          };
-        });
-
-        // Populate filters
-        populateFilters(jobs);
-
-        // Populate accordion initially with all jobs
-        populateAccordion(jobs);
-      }
-
-      // Populate filters dynamically
-      function populateFilters(data) {
-        const categoryFilter = document.getElementById("category");
-        const locationFilter = document.getElementById("location");
-
-        // Get unique categories and locations
-        const uniqueCategories = [
-          ...new Set(data.map((item) => item.category)),
-        ];
-        const uniqueLocations = [...new Set(data.map((item) => item.location))];
-
-        // Populate category filter
-        uniqueCategories.forEach((category) => {
-          const option = document.createElement("option");
-          option.value = category;
-          option.textContent = category;
-          categoryFilter.appendChild(option);
-        });
-
-        // Populate location filter
-        uniqueLocations.forEach((location) => {
-          const option = document.createElement("option");
-          option.value = location;
-          option.textContent = location;
-          locationFilter.appendChild(option);
-        });
-
-        // Add event listeners for filtering
-        categoryFilter.addEventListener("change", () => filterJobs(data));
-        locationFilter.addEventListener("change", () => filterJobs(data));
-      }
-
-      // Populate accordion dynamically
-      function populateAccordion(data) {
-        const accordionContainer = document.querySelector(".accordion");
-        accordionContainer.innerHTML = ""; // Clear existing content
-
-        // Group jobs by category
-        const groupedJobs = data.reduce((acc, { category, job, location }) => {
-          acc[category] = acc[category] || [];
-          acc[category].push({ job, location });
-          return acc;
-        }, {});
-
-        Object.entries(groupedJobs).forEach(([category, jobs]) => {
-          const item = document.createElement("div");
-          item.className = "accordion-item";
-
-          // Accordion header
-          const header = document.createElement("h2");
-          header.textContent = category;
-          header.addEventListener("click", () => {
-            const content = header.nextElementSibling;
-            const isOpen = content.classList.contains("open");
-
-            // Close all other items
-            document.querySelectorAll(".accordion-content").forEach((c) => {
-              c.classList.remove("open");
-              c.style.maxHeight = null;
-            });
-
-            // Open this one
-            if (!isOpen) {
-              content.classList.add("open");
-              content.style.maxHeight = content.scrollHeight + "px";
-            }
-          });
-
-          // Accordion content
-          const content = document.createElement("div");
-          content.className = "accordion-content";
-
-          // Populate jobs for the category
-          jobs.forEach(({ job, location }) => {
-            const jobItem = document.createElement("p");
-            jobItem.textContent = `${job} (${location})`;
-            content.appendChild(jobItem);
-          });
-
-          item.appendChild(header);
-          item.appendChild(content);
-          accordionContainer.appendChild(item);
-        });
-      }
-
-      // Filter jobs based on selected filters
-      function filterJobs(data) {
-        const categoryFilter = document.getElementById("category").value;
-        const locationFilter = document.getElementById("location").value;
-
-        // Apply filters
-        const filteredJobs = data.filter((job) => {
-          const matchesCategory =
-            categoryFilter === "All categories" ||
-            job.category === categoryFilter;
-          const matchesLocation =
-            locationFilter === "All locations" ||
-            job.location === locationFilter;
-          return matchesCategory && matchesLocation;
-        });
-
-        // Repopulate accordion with filtered jobs
-        populateAccordion(filteredJobs);
-      }
-
-      // Load the CSV and initialize the page
-      document.addEventListener("DOMContentLoaded", loadCSV);
-    </script> -->
+          </svg>
+        </button> -->
+      </section>
+      <section class="accordion">
+        <!-- Dynamic content goes here -->
+      </section>
+    </div>
+    <footer class="footer mt-5">
+      <div class="container">
+        <div class="footer-heading row py-5">
+          <a
+            href="/"
+            class="d-flex justify-content-start align-items-center gap-2"
+            ><img class="logo-img" src="../images/logo.png" />
+            <h1 class="m-0">Blitzfa</h1>
+          </a>
+        </div>
+        <div class="row m-0 mb-5">
+          <div class="col-12 col-sm-5 mt-2">
+            <ul>
+              <li class="my-3">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <p class="m-0">Mumbai, Maharashtra</p>
+              </li>
+              <li>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <p class="m-0">ecommerce@blitzfa.org</p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-6 col-sm-4 mt-2">
+            <h3>Our Information</h3>
+            <div class="border1"></div>
+            <!--for the underline -->
+            <ul>
+              <a href="../" class="my-3 d-block">
+                <li>Home</li>
+              </a>
+              <a href="../#about" class="my-3 d-block">
+                <li>About Us</li>
+              </a>
+              <a href="../#products" class="my-3 d-block">
+                <li>Products</li>
+              </a>
+              <a href="../#contact" class="my-3 d-block">
+                <li>Contact Us</li>
+              </a>
+            </ul>
+          </div>
+          <div class="col-6 col-sm-3 mt-2">
+            <h3>Our Products</h3>
+            <div class="border1"></div>
+            <!--for the underline -->
+            <ul>
+              <a href="./products/indusvale.html" class="my-3 d-block">
+                <li>IndusVale</li>
+              </a>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">All rights reservered @ 2023</div>
+      </div>
+    </footer>
     <script>
       // Fetch and parse CSV file
       async function loadCSV() {
