Added careers page to the Navbar

--- a/careers/index.html
+++ b/careers/index.html
@@ -82,6 +82,7 @@
             </li>
 
             <li><a href="../#contact">Contact Us</a></li>
+            <li><a href="./">Careers</a></li>
           </ul>
           <button class="hamburger">
             <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
