--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -149,7 +149,7 @@
               </a>
             </div>
             <ul>
-              <li><a href="/#about">About Us</a></li>
+              <li><a href="../#about">About Us</a></li>
               <!-- <li><a href="#products">Products</a></li> -->
 
               <li class="dropdown">
@@ -162,7 +162,8 @@
                 </div>
               </li>
 
-              <li><a href="/#contact">Contact Us</a></li>
+              <li><a href="../#contact">Contact Us</a></li>
+              <li><a href="../careers/">Careers</a></li>
             </ul>
             <button class="hamburger">
               <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
