Added careers page to the Footer

--- a/products/indusvale.html
+++ b/products/indusvale.html
@@ -341,6 +341,9 @@
               <a href="/#contact" class="my-3 d-block">
                 <li>Contact Us</li>
               </a>
+              <a href="./careers/" class="my-3 d-block">
+                <li>Careers</li>
+              </a>
             </ul>
           </div>
           <div class="col-6 col-sm-3 mt-2">
