--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="We build technologies that connect E-commerce to Entertainment, integrating lifestyle/fashion products to content creation/consumption" />
     <title>Blitzfa</title>
     <link rel="icon" href="./images/logo-black.png" />
     <link
